Fix fouc when in dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@
   outline: none;
 }
 
-body {
+body.animate-theme {
   transition:
     background-color 0.3s ease,
     color 0.3s ease;
